--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://vikram1155.github.io/weather-application",
+    "homepage": "http://vikram1155.github.io/weather-application",
     "name": "weatherapp",
     "version": "0.1.0",
     "private": true,
